# stellar-challenge-level-2

./: .gitignore  BEFORE_AFTER_GUIDE.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LEVEL_2_UPGRADE.md  QUICK_START.md  README.md  SOROBAN_CHANGES.md  SOROBAN_DEPLOYMENT.md  SOROBAN_INTEGRATION_SUMMARY.md  SOROBAN_QUICKSTART.md  UPGRADE_COMPLETE.md  UPGRADE_README.md  UPGRADE_SUMMARY.md  package.json
soroban/: Cargo.toml  README.md
soroban/src/: lib.rs
src/: App.js
src/components/: Freighter.js  SendXLM.js  TransactionStatus.js  WalletCard.js  WalletManager.js
src/config/: soroban.js
src/context/: WalletContext.js
src/lib/: sorobanClient.js  transactionTracker.js
