[package]
name = "payment_recorder"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.3.0" }

[dev-dependencies]
soroban-sdk = { version = "21.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
